--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <header>
     <div class="logo">
-        <a href="#"><img src="img/logoo.png" alt="Floricultura Santa Clara"></a>
+        <a href="#"><img src="logoo.png" alt="Floricultura Santa Clara"></a>
     </div>
     <nav class="menu menu-icon">
 
@@ -34,65 +34,64 @@
    
         <ul>
             <li><a href="#">Produtos</a></li>
-            <li><a href="#"><img src="img/icons8-carrinho-de-compras-24.png" alt="Carrinho de compras"></a></li>
+            <li><a href="#"><img src="icons8-carrinho-de-compras-24.png" alt="Carrinho de compras"></a></li>
         </ul>
     </nav>
 
     <button id="menuButton"><i class="fa fa-bars"></i></button>
 </header>
-    <img src="img/agricultor-segurando-um-documento-e-dando-os-polegares-para-cima_53419-362.avif" alt="">
     <section class="produtos">
             <div class="produto">
-              <img src="img/buquedeFlores.webp" alt="Produto 1">
+              <img src="buquedeFlores.webp" alt="Produto 1">
               <p> fror</p>
               <p>1 reais chinex</p>
               <button>Adicionar ao carrinho</button>
             </div>
             <div class="produto">
-              <img src="img/cachepot.jpg" alt="Produto 2">
+              <img src="cachepot.jpg" alt="Produto 2">
               <p> vasu de pranta</p>
               <p>1 euros africano</p>
               <button>Adicionar ao carrinho</button>
             </div>
             <div class="produto">
-              <img src="img/rosadoDeserto-1.jpg" alt="Produto 3">
+              <img src="rosadoDeserto-1.jpg" alt="Produto 3">
               <p> roza du dizerto</p>
               <p> 1 rublo argentino</p>
               <button>Adicionar ao carrinho</button>
             </div>
 
         <div  class="produto">
-            <img src="img/buquedeFlores.webp" alt="Produto 1">
+            <img src="buquedeFlores.webp" alt="Produto 1">
             <p> fror</p>
             <p>1 reais chinex</p>
             <button>Adicionar ao carrinho</button>
           </div>
           <div  class="produto">
-            <img src="img/cachepot.jpg" alt="Produto 2">
+            <img src="cachepot.jpg" alt="Produto 2">
             <p> vasu de pranta</p>
             <p>1 euros africano</p>
             <button>Adicionar ao carrinho</button>
           </div>
           <div class="produto">
-            <img src="img/rosadoDeserto-1.jpg" alt="Produto 3">
+            <img src="rosadoDeserto-1.jpg" alt="Produto 3">
             <p> roza du dizerto</p>
             <p> 1 rublo argentino</p>
             <button>Adicionar ao carrinho</button>
           </div>
           <div class="produto">
-            <img src="img/buquedeFlores.webp" alt="Produto 1">
+            <img src="buquedeFlores.webp" alt="Produto 1">
             <p> fror</p>
             <p>1 reais chinex</p>
             <button>Adicionar ao carrinho</button>
           </div>
           <div class="produto">
-            <img src="img/cachepot.jpg" alt="Produto 2">
+            <img src="cachepot.jpg" alt="Produto 2">
             <p> vasu de pranta</p>
             <p>1 euros africano</p>
             <button>Adicionar ao carrinho</button>
           </div>
           <div class="produto">
-            <img src="img/rosadoDeserto-1.jpg" alt="Produto 3">
+            <img src="rosadoDeserto-1.jpg" alt="Produto 3">
             <p> roza du dizerto</p>
             <p> 1 rublo argentino</p>
             <button>Adicionar ao carrinho</button>
@@ -124,7 +123,7 @@
         <h4>Atendimento</h4>
         <ul>
 
-          <li> <a href="https://api.whatsapp.com/send?phone=5577991307883" target="_blank"> <img src="img/whatsapp.png" alt="whatsapp"></a> </li>
+          <li> <a href="https://api.whatsapp.com/send?phone=5577991307883" target="_blank"> <img src="whatsapp.png" alt="whatsapp"></a> </li>
 
           <li><a href="mailto:contato@floriculturasantaclara.com.br">contato@floriculturasantaclara.com.br</a></li>
         </ul>
@@ -133,8 +132,8 @@
         <div class="footer-section redesSocial">
           <h3>Redes Sociais</h3>
           <ul>
-            <li><a href="https://www.facebook.com/profile.php?id=100091843067867" target="_blank"  ><img src="img/facebook.png" alt="Facebook"></a></li> 
-            <li><a href="https://instagram.com/floriculturasantaclara_?igshid=ZDdkNTZiNTM=" target="_blank"><img src="img/instagram.png" alt="Instagram"></a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100091843067867" target="_blank"  ><img src="facebook.png" alt="Facebook"></a></li> 
+            <li><a href="https://instagram.com/floriculturasantaclara_?igshid=ZDdkNTZiNTM=" target="_blank"><img src="instagram.png" alt="Instagram"></a></li>
           </ul>
         </div>
 
