--- a/sobrenos.html
+++ b/sobrenos.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Floricultura Santa Clara</title>
 
-    <link rel="stylesheet" href="css/stlyle.css">
-    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="stlyle.css">
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Schibsted+Grotesk:ital,wght@1,500&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
 
     <header>
       <div class="logo">
-        <a href="index.html"><img src="img/logoo.png" alt="Floricultura Santa Clara"></a>
+        <a href="index.html"><img src="logoo.png" alt="Floricultura Santa Clara"></a>
       </div>
 
       <form>
@@ -32,7 +32,7 @@
       <nav>
        <ul>
         <li><a href="index.html">Produtos</a></li>
-        <li><a href="#"><img src="img/icons8-carrinho-de-compras-24.png" alt=""></a></li>
+        <li><a href="#"><img src="icons8-carrinho-de-compras-24.png" alt=""></a></li>
         </ul>
       </nav>
 
@@ -91,8 +91,8 @@
           <div class="footer-section redesSocial">
             <h3>Redes Sociais</h3>
             <ul>
-              <li><a href="https://www.facebook.com/profile.php?id=100091843067867" target="_blank" ><img src="img/facebook.png" alt="Facebook"></a></li>
-              <li><a href="https://instagram.com/floriculturasantaclara_?igshid=ZDdkNTZiNTM=" target="_blank"><img src="img/instagram.png" alt="Instagram"></a></li>
+              <li><a href="https://www.facebook.com/profile.php?id=100091843067867" target="_blank" ><img src="facebook.png" alt="Facebook"></a></li>
+              <li><a href="https://instagram.com/floriculturasantaclara_?igshid=ZDdkNTZiNTM=" target="_blank"><img src="instagram.png" alt="Instagram"></a></li>
             </ul>
           </div>
   
