--- a/centraldeajuda.html
+++ b/centraldeajuda.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Central de ajudas</title>
     
-    <link rel="stylesheet" href="css/stlyle.css">
+    <link rel="stylesheet" href="stlyle.css">
 </head>
 <body>
     
@@ -14,7 +14,7 @@
 
 <header>
     <div class="logo">
-      <a href="index.html"><img src="img/logoo.png" alt="Floricultura Santa Clara"></a>
+      <a href="index.html"><img src="logoo.png" alt="Floricultura Santa Clara"></a>
     </div>
 
     <form>
@@ -25,7 +25,7 @@
     <nav>
      <ul>
       <li><a href="index.html">Produtos</a></li>
-      <li><a href="#"><img src="img/icons8-carrinho-de-compras-24.png" alt=""></a></li>
+      <li><a href="#"><img src="icons8-carrinho-de-compras-24.png" alt=""></a></li>
       </ul>
     </nav>
 
@@ -77,7 +77,7 @@
           <h4>Atendimento</h4>
           <ul>
   
-            <li> <a href="https://api.whatsapp.com/send?phone=5577991307883" target="_blank"> <img src="img/whatsapp.png" alt="whatsapp"></a> </li>
+            <li> <a href="https://api.whatsapp.com/send?phone=5577991307883" target="_blank"> <img src="whatsapp.png" alt="whatsapp"></a> </li>
   
             <li><a href="mailto:contato@floriculturasantaclara.com.br">contato@floriculturasantaclara.com.br</a></li>
           </ul>
@@ -86,8 +86,8 @@
           <div class="footer-section redesSocial">
             <h3>Redes Sociais</h3>
             <ul>
-              <li><a href="https://www.facebook.com/profile.php?id=100091843067867" target="_blank"  ><img src="img/facebook.png" alt="Facebook"> Facebook</a></li> 
-              <li><a href="https://instagram.com/floriculturasantaclara_?igshid=ZDdkNTZiNTM=" target="_blank"><img src="img/instagram.png" alt="Instagram"></a></li>
+              <li><a href="https://www.facebook.com/profile.php?id=100091843067867" target="_blank"  ><img src="facebook.png" alt="Facebook"> Facebook</a></li> 
+              <li><a href="https://instagram.com/floriculturasantaclara_?igshid=ZDdkNTZiNTM=" target="_blank"><img src="instagram.png" alt="Instagram"></a></li>
             </ul>
           </div>
   
